<resources>
    <string name="app_name">Creme_project</string>
    <string name="subtitle">A Full Circle of Flavor in Every Cake We Bake.</string>
    <string name="start_textButton">Start</string>
    <string name="get_started_textBtn">Get Started</string>
    <string name="category_title">All Categories</string>
    <string name="menu_icon">Menu Icon</string>
    <string name="home_icon">Home Icon</string>
    <string name="cart_icon">Cart Icon</string>
    <string name="search_field">Search here!</string>
    <string name="detail_description_text"><![CDATA[Kue cokelat premium yang kaya rasa cokelat dengan isian kacang almond dan hazelnut yang melimpah.]]></string>
    <string name="detail_value_text">0</string>
</resources>
