<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    >

    <ImageView
        android:id="@+id/menu_icon"
        android:layout_width="18dp"
        android:layout_height="24dp"
        android:src="@drawable/menu"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/menu_icon" />

    <ImageView
        android:id="@+id/home_icon"
        android:layout_width="150dp"
        android:layout_height="24dp"
        android:layout_centerInParent="true"
        android:src="@drawable/title"
        android:contentDescription="@string/home_icon" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:src="@drawable/outline_shopping_cart_24"
        android:layout_alignParentEnd="true"
        android:contentDescription="@string/cart_icon" />
</RelativeLayout>